--- a/aula2/portfolio/aula - 1 html/curriculo.html
+++ b/aula2/portfolio/aula - 1 html/curriculo.html
@@ -15,14 +15,14 @@
 
             <a class="cabecalho-menu-links" href="sobremim.html">Sobre mim</a>
 
-            <a class="cabecalho-menu-links" href="curriculo.html">currículo</a>
+            <a class="cabecalho-menu-links" href="curriculo.html">Currículo</a>
 
         </nav>
     </header>
 
     <main class="conteudo">
         <section class="apresentacao-conteudo">
-            <h1 class="apresentacao-conteudo-titulo">Curriculo:</h1>
+            <h1 class="apresentacao-conteudo-titulo">Currículo:</h1>
             <p class="apresentacao-conteudo-texto"> 
                 <ul class="apresentacao-conteudo-texto">
                     <li> Idade: 18.</li>
