--- a/aula2/portfolio/aula - 1 html/sobremim.html
+++ b/aula2/portfolio/aula - 1 html/sobremim.html
@@ -31,7 +31,7 @@
                     </p>
             </div>
             <div class="euzinha">
-                <img class="euzinha" src="./assets/gabizinha.jpg" alt="euzinha">
+                <img class="euzinha" src="./assets/euzinha.jpg" alt="euzinha">
             </div>
         </section>
     </main>
